add images folder

--- a/portfolio.html
+++ b/portfolio.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Prit Sakhvala-Protfolio</title>
-    <link rel="icon" href="prit.JPG" type="image/x-icon" />
+    <link rel="icon" href="./images/prit.JPG" type="image/x-icon" />
     <link rel="stylesheet" href="portfolio.css" type="text/css" />
   </head>
   <body>
     <header>
-      <img src="prit.JPG" alt="Profile Photo" />
+      <img src="./images/prit.JPG" alt="Profile Photo" />
       <h1>Prit Sakhvala</h1>
       <a
         href="https://www.linkedin.com/in/prit-sakhvala-815836285/"
@@ -64,16 +64,16 @@
     <section id="featured">
       <h2>Featured</h2>
       <a href="https://leetcode.com/prit_07/" target="_blank">
-        <img src="leetcodepng.png" alt="leetcode profile" />
+        <img src="./images/leetcodepng.png" alt="leetcode profile" />
       </a>
       <a
         href="https://www.codingninjas.com/studio/profile/coder_21"
         target="_blank"
       >
-        <img src="coding ninja.jpg" alt="coding ninja profile" />
+        <img src="./images/coding ninja.jpg" alt="coding ninja profile" />
       </a>
       <a href="https://github.com/pritsakhvala" target="_blank">
-        <img src="git.png" alt="github profile" />
+        <img src="./images/git.png" alt="github profile" />
       </a>
     </section>
     <section id="work">
@@ -84,17 +84,17 @@
           href="https://github.com/rutupatel53/BeyondClassroom"
           target="_blank"
         >
-          <img src="BeyondClassroom.png" alt="BeyondClassroom" />
+          <img src="./images/BeyondClassroom.png" alt="BeyondClassroom" />
         </a>
       </div>
       <div class="project" id="project2">
         <a href="https://github.com/pritsakhvala/Pig-game" target="_blank">
-          <img src="game.png" alt="Pig-game" />
+          <img src="./images/game.png" alt="Pig-game" />
         </a>
       </div>
       <div class="project" id="project3">
         <a href="https://github.com/pritsakhvala/Workout-app" target="_blank">
-          <img src="workout.jpg" alt="workout app" />
+          <img src="./images/workout.jpg" alt="workout app" />
         </a>
       </div>
     </section>
